[gd_scene load_steps=12 format=3 uid="uid://cxnxm12ha0jqq"]

[ext_resource type="Script" path="res://scripts/level/level_hst.gd" id="1_aitd3"]
[ext_resource type="Texture2D" uid="uid://bwomwu6j625ij" path="res://assets/gameBackground.jpg" id="1_awtxi"]
[ext_resource type="FontVariation" uid="uid://uchs7wm3my1k" path="res://boldfont.tres" id="2_j4ukf"]
[ext_resource type="Resource" uid="uid://blyunharw1rl7" path="res://resources/bd/bd_quiz_hst.tres" id="2_su558"]
[ext_resource type="Texture2D" uid="uid://cdpry3odt7p7m" path="res://assets/gameoverbackground.jpg" id="5_mo7o3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c066y"]
bg_color = Color(0.966284, 0.878061, 0.988189, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.796705, 0.258441, 0.914865, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mj02o"]
bg_color = Color(0.966284, 0.878061, 0.988189, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.796705, 0.258441, 0.914865, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3kkai"]
bg_color = Color(0.966284, 0.878061, 0.988189, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.796705, 0.258441, 0.914865, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h27ib"]
bg_color = Color(0.796078, 0.258824, 0.913725, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4oufe"]
bg_color = Color(0.796078, 0.258824, 0.913725, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rmch1"]
bg_color = Color(0.796078, 0.258824, 0.913725, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[node name="Level_hst" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aitd3")
bd_quiz = ExtResource("2_su558")
color_right = Color(0, 0.662745, 0.321569, 1)
color_wrong = Color(0.792157, 0, 0.196078, 1)

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.576471, 0.117647, 0.682353, 1)

[node name="GameBackground" type="Sprite2D" parent="Background"]
position = Vector2(360, 641)
texture = ExtResource("1_awtxi")

[node name="Question_info" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -338.0
offset_top = 26.0
offset_right = 343.0
offset_bottom = 601.0
grow_horizontal = 2

[node name="Txt_question" type="Label" parent="Question_info"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("2_j4ukf")
theme_override_font_sizes/font_size = 60
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Panel" type="Panel" parent="Question_info"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
size_flags_vertical = 3

[node name="Question_image" type="TextureRect" parent="Question_info/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Question_holder" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -332.0
offset_top = -647.0
offset_right = 328.0
offset_bottom = -29.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20

[node name="Button_option_1" type="Button" parent="Question_holder"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.514096, 0.0650245, 0.603117, 1)
theme_override_colors/font_pressed_color = Color(0.514096, 0.0650245, 0.603117, 1)
theme_override_colors/font_hover_color = Color(0.514096, 0.0650245, 0.603117, 1)
theme_override_fonts/font = ExtResource("2_j4ukf")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_c066y")
theme_override_styles/hover = SubResource("StyleBoxFlat_mj02o")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3kkai")

[node name="Button_option_2" type="Button" parent="Question_holder"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.514096, 0.0650245, 0.603117, 1)
theme_override_colors/font_pressed_color = Color(0.514096, 0.0650245, 0.603117, 1)
theme_override_colors/font_hover_color = Color(0.514096, 0.0650245, 0.603117, 1)
theme_override_fonts/font = ExtResource("2_j4ukf")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_c066y")
theme_override_styles/hover = SubResource("StyleBoxFlat_mj02o")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3kkai")

[node name="Button_option_3" type="Button" parent="Question_holder"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.514096, 0.0650245, 0.603117, 1)
theme_override_colors/font_pressed_color = Color(0.514096, 0.0650245, 0.603117, 1)
theme_override_colors/font_hover_color = Color(0.514096, 0.0650245, 0.603117, 1)
theme_override_fonts/font = ExtResource("2_j4ukf")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_c066y")
theme_override_styles/hover = SubResource("StyleBoxFlat_mj02o")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3kkai")

[node name="Button_option_4" type="Button" parent="Question_holder"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.514096, 0.0650245, 0.603117, 1)
theme_override_colors/font_pressed_color = Color(0.514096, 0.0650245, 0.603117, 1)
theme_override_colors/font_hover_color = Color(0.514096, 0.0650245, 0.603117, 1)
theme_override_fonts/font = ExtResource("2_j4ukf")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_c066y")
theme_override_styles/hover = SubResource("StyleBoxFlat_mj02o")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3kkai")

[node name="Back_menu_button" type="Button" parent="."]
layout_mode = 0
offset_left = 69.0
offset_top = 2.0
offset_right = 119.0
offset_bottom = 70.0
rotation = 1.57483
theme_override_fonts/font = ExtResource("2_j4ukf")
theme_override_font_sizes/font_size = 60
text = "..."
flat = true

[node name="Game_over" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="Game_over"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Gameoverbackground" type="Sprite2D" parent="Game_over/Background"]
position = Vector2(362, 641)
texture = ExtResource("5_mo7o3")

[node name="Txt_points" type="Label" parent="Game_over"]
layout_mode = 0
offset_left = 235.0
offset_top = 270.0
offset_right = 476.0
offset_bottom = 416.0
theme_override_fonts/font = ExtResource("2_j4ukf")
theme_override_font_sizes/font_size = 100
text = "142"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Txt_info" type="Label" parent="Game_over"]
layout_mode = 0
offset_left = 186.0
offset_top = 416.0
offset_right = 553.0
offset_bottom = 522.0
theme_override_fonts/font = ExtResource("2_j4ukf")
theme_override_font_sizes/font_size = 60
text = "Parab√©ns!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Alinhamento" type="HBoxContainer" parent="Game_over"]
layout_mode = 0
offset_left = 148.0
offset_top = 725.0
offset_right = 656.0
offset_bottom = 837.0

[node name="Acertou" type="Label" parent="Game_over/Alinhamento"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_j4ukf")
theme_override_font_sizes/font_size = 60
text = "Acertou:  "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Txt_result" type="Label" parent="Game_over/Alinhamento"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_j4ukf")
theme_override_font_sizes/font_size = 60
text = "0/0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button_menu" type="Button" parent="Game_over"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -148.0
offset_top = -198.0
offset_right = 149.0
offset_bottom = -96.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_j4ukf")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_h27ib")
theme_override_styles/hover = SubResource("StyleBoxFlat_4oufe")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rmch1")
text = "Menu"

[node name="Txt_timer" type="Label" parent="."]
layout_mode = 0
offset_left = 331.0
offset_top = 22.0
offset_right = 402.0
offset_bottom = 85.0
theme_override_fonts/font = ExtResource("2_j4ukf")
theme_override_font_sizes/font_size = 60
text = "10"
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="pressed" from="Back_menu_button" to="." method="_on_back_menu_button_pressed"]
[connection signal="pressed" from="Game_over/Button_menu" to="." method="_on_button_menu_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
